--- a/qml.qrc
+++ b/qml.qrc
@@ -1,6 +1,5 @@
 <RCC>
     <qresource prefix="/">
-        <file>main.qml</file>
-        <file>new.qml</file>
+        <file>MainForm.qml</file>
     </qresource>
 </RCC>
